[gd_scene load_steps=9 format=3 uid="uid://nu1cl703v3dc"]

[ext_resource type="VideoStream" uid="uid://cvgrannfv5p1j" path="res://assets/UI/MainMenu/Graphics/bg_loop_blurred.ogv" id="1_5o0ao"]
[ext_resource type="Script" uid="uid://b8p5eo4j4wvyw" path="res://scripts/MainMenu/MainMenu.gd" id="1_si7on"]
[ext_resource type="FontFile" uid="uid://creniyu20qcyq" path="res://assets/UI/Fonts/Stormfaze.otf" id="2_c5d1r"]
[ext_resource type="FontFile" uid="uid://cs3ocbk0naj0c" path="res://assets/UI/Fonts/Neuropol.otf" id="5_j26ry"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6quh8"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5o0ao"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_si7on"]
bg_color = Color(0, 0, 0, 0.6784314)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5o0ao"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_si7on")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_left = -973.0
offset_top = -546.0
offset_right = 968.0
offset_bottom = 552.0
stream = ExtResource("1_5o0ao")
volume_db = -80.0
autoplay = true
expand = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.0
offset_top = -100.0
offset_right = 281.0
offset_bottom = 397.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 44

[node name="StartBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_j26ry")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_6quh8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5o0ao")
theme_override_styles/hover = SubResource("StyleBoxFlat_si7on")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5o0ao")
text = "START SIMULATION"

[node name="OptionBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_j26ry")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_6quh8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5o0ao")
theme_override_styles/hover = SubResource("StyleBoxFlat_si7on")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5o0ao")
text = "OPTIONS"

[node name="ExitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_j26ry")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_6quh8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5o0ao")
theme_override_styles/hover = SubResource("StyleBoxFlat_si7on")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5o0ao")
text = "EXIT"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.5
offset_top = -450.0
offset_right = 305.5
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("2_c5d1r")
theme_override_font_sizes/font_size = 100
text = "ATGM
SIMULATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Footer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -535.0
offset_top = 463.0
offset_right = 561.0
offset_bottom = 528.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("5_j26ry")
theme_override_font_sizes/font_size = 25
text = "ISS Project 2026 (FER)
Created by Daniel Batinić, Leon Lužaić, Ivan Periša, Karim Krklec, Nikola Simunić"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionBtn" to="." method="_on_option_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
